<resources>
    <string name="app_name" translatable="false">Pet Care</string>

    <!-- Pet -->
    <string name="pet_name_star">*Pet name</string>
    <string name="pet_name">Pet name</string>
    <string name="pet_species_star">*Pet species</string>
    <string name="pet_species">Pet species</string>
    <string name="pet_breed">Pet breed</string>
    <string name="pet_sex_star">*Pet sex</string>
    <string name="pet_sex">Pet sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="pet_date_of_birth">*Pet date of birth</string>
    <string name="pet_age">Pet age</string>
    <string name="pet_colour">Pet colour</string>
    <string name="pet_chip">Pet chip number</string>
    <string name="pet_image">Pet image</string>

    <!-- Vaccine -->
    <string name="vaccine_name">Name</string>
    <string name="vaccine_name_star">*Name</string>
    <string name="vaccine_description">Description</string>
    <string name="vaccination_date">Vaccination date</string>
    <string name="vaccination_date_star">*Vaccination date</string>
    <string name="next_vaccination_date">Next vaccination date</string>
    <string name="next_vaccination_date_star">*Next vaccination date</string>

    <!-- Medication -->
    <string name="medication_name_star">*Name</string>
    <string name="medication_name">Name</string>
    <string name="medication_description">Description</string>
    <string name="medication_dosage_star">*Dosage</string>
    <string name="medication_dosage">Dosage</string>
    <string name="medication_start_date_star">*Start date</string>
    <string name="medication_start_date">Start date</string>
    <string name="medication_end_date">End date</string>
    <string name="medication_repetition">Repetition</string>

    <!-- Bath -->
    <string name="bath_date_star">*Bath date</string>
    <string name="bath_date">Bath date</string>
    <string name="next_bath">Next bath</string>

    <!-- Grooming -->
    <string name="grooming_date_star">*Grooming date</string>
    <string name="grooming_date">Grooming date</string>
    <string name="next_grooming_date">Next grooming</string>

    <!-- Exams -->
    <string name="exam_type_star">*Type</string>
    <string name="exam_type">Type</string>
    <string name="exam_description">Description</string>
    <string name="examination_date_star">*Examination date</string>
    <string name="examination_date">Examination date</string>
    <string name="next_examination_date">Next examination date</string>
    <string name="exam_details">Exam Details</string>

    <!-- Buttons -->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save_info">Save Info</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="vaccines">Vaccines</string>
    <string name="medication">Medication</string>
    <string name="exams">Exams</string>
    <string name="bath">Bath</string>
    <string name="grooming">Grooming</string>
    <string name="add_image">Add image</string>
    <string name="add_file">Add file</string>

    <!-- Dialogues -->
    <string name="delete_question">Are you sure you want to delete </string>
    <string name="delete_vaccine_question">Are you sure you want to delete this vaccine information</string>
    <string name="delete_medication_question">Are you sure you want to delete this medication information</string>
    <string name="delete_exam_question">Are you sure you want to delete this exam information</string>
    <string name="delete_bath_question">Are you sure you want to delete this bath information</string>
    <string name="delete_grooming_question">Are you sure you want to delete this grooming information</string>

    <!-- Field completion -->
    <string name="mandatory_fields">Fields annotated with * are required</string>
    <string name="bath_fields">Bath date is required</string>
    <string name="grooming_fields">Grooming date is required</string>
    <string name="medication_fields">Medications name, dosage and start date are required</string>
    <string name="pet_fields">Pets name, species, sex and date of birth are required</string>
    <string name="vaccine_fields">Vaccines name, vaccination date and next vaccination date are required</string>
    <string name="exams_fields">Exam type and examination date are required</string>

    <!-- Fragment titles -->
    <string name="add_pet">Add pet</string>
    <string name="update_pet">Update pet\'s Information</string>
    <string name="add_vaccine">Add vaccine</string>
    <string name="update_vaccine">Update pet\'s vaccine</string>
    <string name="add_medication">Add medication</string>
    <string name="update_medication">Update pet\'s medication</string>
    <string name="add_exam">Add exam</string>
    <string name="update_exam">Update pet\'s exam</string>
    <string name="add_bath">Add bath</string>
    <string name="update_bath">Update pet\'s bath</string>
    <string name="add_grooming">Add grooming</string>
    <string name="update_grooming">Update pet\'s grooming</string>
    <string name="results">Results</string>

    <!-- Toast messages -->
    <string name="pet_insert" translatable="false">Pet register was successful</string>
    <string name="pet_delete" translatable="false">Delete of pet was successful</string>
    <string name="pet_update" translatable="false">Pet update was successful</string>

    <string name="empty_description">No description added for this field</string>
    <string name="empty_date" translatable="false">--/--/--</string>

    <!-- Date buttons -->
    <string name="clear_date">Clear date</string>

    <!-- Spinners -->
    <string-array name="dosage_spinner">
        <item>---</item>
        <item>ml</item>
        <item>cc</item>
        <item>pill</item>
        <item>dose</item>
        <item>ampoule</item>
    </string-array>

    <string-array name="repetition_spinner">
        <item>---</item>
        <item>days</item>
        <item>weeks</item>
        <item>months</item>
        <item>years</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>