<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pet.PetDetailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pet_name_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/pet_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pet_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/pet_name_star" />

        <TextView
            android:id="@+id/pet_species_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/pet_species"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_name" />

        <TextView
            android:id="@+id/pet_species"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/pet_name"
            app:layout_constraintTop_toBottomOf="@id/pet_name"
            tools:text="@string/pet_species_star" />

        <TextView
            android:id="@+id/pet_breed_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/pet_breed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_species" />

        <TextView
            android:id="@+id/pet_breed"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/pet_species"
            app:layout_constraintTop_toBottomOf="@id/pet_species"
            tools:text="@string/pet_breed" />

        <TextView
            android:id="@+id/pet_sex_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/pet_sex"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_breed" />

        <TextView
            android:id="@+id/pet_sex"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/pet_breed"
            app:layout_constraintTop_toBottomOf="@id/pet_breed"
            tools:text="@string/pet_sex_star" />

        <TextView
            android:id="@+id/pet_date_of_birth_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/pet_age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_sex" />

        <TextView
            android:id="@+id/pet_date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/pet_sex"
            app:layout_constraintTop_toBottomOf="@id/pet_sex"
            tools:text="@string/pet_date_of_birth" />

        <TextView
            android:id="@+id/pet_colour_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/pet_colour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_date_of_birth" />

        <TextView
            android:id="@+id/pet_colour"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/pet_date_of_birth"
            app:layout_constraintTop_toBottomOf="@id/pet_date_of_birth"
            tools:text="@string/pet_colour" />

        <TextView
            android:id="@+id/pet_chip_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/pet_chip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_colour" />

        <TextView
            android:id="@+id/pet_chip"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/pet_colour"
            app:layout_constraintTop_toBottomOf="@id/pet_colour"
            tools:text="@string/pet_chip" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="3dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_chip_label" />

        <Button
            android:id="@+id/vaccine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/vaccine"
            android:text="@string/vaccines"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_chip" />

        <Button
            android:id="@+id/medication_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/medication"
            android:text="@string/medication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vaccine_button" />

        <Button
            android:id="@+id/exams_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/exams"
            android:text="@string/exams"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medication_button" />

        <Button
            android:id="@+id/bath_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/bath"
            android:text="@string/bath"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exams_button" />

        <Button
            android:id="@+id/grooming_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/grooming"
            android:text="@string/grooming"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bath_button" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/grooming_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/red_400"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/grooming_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>