<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.vaccine.VaccineListFragment">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/vaccine_name_header"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vaccine_description_header"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_description"
                app:layout_constraintStart_toEndOf="@+id/vaccine_name_header"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vaccination_date_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccination_date"
                app:layout_constraintStart_toEndOf="@+id/vaccine_description_header"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/next_vaccination_date_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_vaccination_date"
                app:layout_constraintStart_toEndOf="@id/vaccination_date_header"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vaccine_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/next_vaccination_date_header" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vaccine_recycler" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

</ScrollView>