<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bath.AddBathFragment">

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/mandatory_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bath_date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/bath_date_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_text"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bath_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/clear_bath_date"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bath_date_label"
        app:layout_constraintTop_toTopOf="@id/bath_date_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/next_bath_date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/next_bath"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bath_date_label"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/next_bath_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/clear_next_bath_date"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/next_bath_date_label"
        app:layout_constraintTop_toTopOf="@id/next_bath_date_label" />

    <Button
        android:id="@+id/save_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_bath_date_label" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red_400"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_info_button" />


</androidx.constraintlayout.widget.ConstraintLayout>